--- a/home.html
+++ b/home.html
@@ -48,6 +48,9 @@
 </head>
 
 <body>
+    <audio autoplay loop>
+        <source src="littlethings.mp3" type="audio/mpeg">
+    </audio>
     <div id="main1" class="center">
         <div id="img1">
             <img src="bear3.gif" alt="">
